--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -81,7 +81,8 @@
       "government": "المحافظة",
     "selectGovernment": "اختر المحافظة",
     "administrationZone": "المنطقة الإدارية",
-    "selectAdministrationZone": "اختر المنطقة الإدارية"
+    "selectAdministrationZone": "اختر المنطقة الإدارية",
+    "yourCustomHobbies": "هواياتك الخاصة"
 
     },
     "gender": {
