register is now kinda complete

--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -26,6 +26,7 @@
       "bio": "نبذة عنك",
       "expertise": "الخبرات",
       "phoneNumber": "الهاتف الشخصي",
+      "phoneNumber2": "الهاتف الشخصي الثاني",
       "parentPhone": "هاتف ولي الأمر",
       "email": "البريد الإلكتروني",
       "address": "العنوان",
@@ -41,7 +42,7 @@
       "uploadAvatar": "رفع صورة شخصية",
       "hobbies": "الهوايات",
       "personalDetails": "البيانات الشخصية",
-      "parentDetails": "بيانات ولي الأمرين",
+      "parentDetails": "بيانات ولي الأ مر",
       "schoolDetails" : "تفاصيل المدرسة ولي الأمرراسة",
       "password": "كلمة المرور",
       "confirmPassword": "تاكيد كلمة المرور",
