lesson details translated

--- a/kalima-platform/frontend/public/locales/en/lectures.json
+++ b/kalima-platform/frontend/public/locales/en/lectures.json
@@ -33,4 +33,63 @@
   "First Secondary": "First Secondary",
   "Second Secondary": "Second Secondary",
   "Third Secondary": "Third Secondary"
+},
+ "common": {
+    "loading": "Loading..."
+  },
+  "errors": {
+    "fetchStudents": "Failed to fetch students"
+  },
+  "lesson": {
+    "detailsTitle": "Lesson Details",
+    "centerUnknown": "Unknown Center"
+  },
+  "attendance": {
+    "success": "Attendance recorded successfully",
+    "error": "Failed to record attendance",
+    "successTitle": "Success!",
+    "errorTitle": "Error!",
+    "studentId": "Student ID",
+    "formTitle": "Record Attendance",
+    "studentIdLabel": "Student Sequential ID",
+    "studentIdPlaceholder": "Enter student ID",
+    "scanButton": "Scan ID",
+    "paymentTypeLabel": "Select Payment Type",
+    "paymentType": {
+      "daily": "Daily",
+      "lesson": "Lesson",
+      "month": "Month",
+      "year": "Year",
+      "multiSession": "Multi Session",
+      "unpaid": "Unpaid"
+    },
+    "amountPaidLabel": "Amount Paid",
+    "amountPaidPlaceholder": "Enter amount",
+    "dateLabel": "Attendance Date (Optional)",
+    "bookletLabel": "Booklet Purchased",
+    "bookletYes": "Yes",
+    "bookletNo": "No",
+    "submitButton": "Record Attendance",
+    "studentListTitle": "Student List",
+    "studentTable": {
+      "id": "ID",
+      "name": "Name",
+      "status": "Status",
+      "active": "Active"
+    },
+    "noStudents": "No students found",
+    "moreStudents": "Showing 5 of {{count}} students"
+  },
+  "barCodeScanner": {
+    "title": "Student ID Scanner",
+    "initializing": "Initializing camera...",
+    "clickStart": "Click 'Start Scanning' to begin",
+    "scanInstructions": "Align student ID barcode in the frame...",
+    "resultLabel": "Student ID Detected:",
+    "startButton": "Start Scanning",
+    "stopButton": "Stop Scanning",
+    "resetButton": "Reset",
+    "permissionWarning": "Could not access camera. Please check permissions.",
+    "scanError": "Failed to initialize scanner"
+  }
 }
