--- a/kalima-platform/frontend/public/locales/ar/lectures.json
+++ b/kalima-platform/frontend/public/locales/ar/lectures.json
@@ -33,6 +33,67 @@
   "First Secondary": "الأول الثانوي",
   "Second Secondary": "الثاني الثانوي",
   "Third Secondary": "الثالث الثانوي"
-}
+},
+
+  "common": {
+    "loading": "جاري التحميل..."
+  },
+  "errors": {
+    "fetchStudents": "فشل في جلب بيانات الطلاب"
+  },
+  "lesson": {
+    "detailsTitle": "تفاصيل الدرس",
+    "centerUnknown": "مركز غير معروف"
+  },
+  "attendance": {
+    "success": "تم تسجيل الحضور بنجاح",
+    "error": "فشل في تسجيل الحضور",
+    "successTitle": "تم بنجاح!",
+    "errorTitle": "خطأ!",
+    "studentId": "رقم الطالب",
+    "formTitle": "تسجيل الحضور",
+    "studentIdLabel": "الرقم التسلسلي للطالب",
+    "studentIdPlaceholder": "أدخل رقم الطالب",
+    "scanButton": "مسح الرمز",
+    "paymentTypeLabel": "اختر نوع الدفع",
+    "paymentType": {
+      "daily": "يومي",
+      "lesson": "درس",
+      "month": "شهري",
+      "year": "سنوي",
+      "multiSession": "جلسات متعددة",
+      "unpaid": "غير مدفوع"
+    },
+    "amountPaidLabel": "المبلغ المدفوع",
+    "amountPaidPlaceholder": "أدخل المبلغ",
+    "dateLabel": "تاريخ الحضور (اختياري)",
+    "bookletLabel": "تم شراء الكتيب",
+    "bookletYes": "نعم",
+    "bookletNo": "لا",
+    "submitButton": "تسجيل الحضور",
+    "studentListTitle": "قائمة الطلاب",
+    "studentTable": {
+      "id": "الرقم",
+      "name": "الاسم",
+      "status": "الحالة",
+      "active": "نشط"
+    },
+    "noStudents": "لم يتم العثور على طلاب",
+    "moreStudents": "عرض 5 من {{count}} طالب"
+  },
+  "barCodeScanner": {
+    "title": "ماسح رمز الطالب",
+    "initializing": "جاري تهيئة الكاميرا...",
+    "clickStart": "انقر على 'بدء المسح' للبدء",
+    "scanInstructions": "قم بمحاذاة رمز الطالب في الإطار...",
+    "resultLabel": "تم اكتشاف رقم الطالب:",
+    "startButton": "بدء المسح",
+    "stopButton": "إيقاف المسح",
+    "resetButton": "إعادة ضبط",
+    "permissionWarning": "تعذر الوصول إلى الكاميرا. يرجى التحقق من الأذونات.",
+    "scanError": "فشل في تهيئة الماسح"
+  }
+
+
 
 }
