--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -159,7 +159,8 @@
         "promoCode": "Promo Code",
         "admin": "Admin",
         "assistant": "Assistant",
-        "parent": "Parent"
+        "parent": "Parent",
+        "package": "Packages"
       },
       "idDisplay": "ID: {{id}}",
       "status": {
