--- a/kalima-platform/frontend/public/locales/en/admin.json
+++ b/kalima-platform/frontend/public/locales/en/admin.json
@@ -9,6 +9,19 @@
       "generatePromoCodes": "Generate Promo Codes",
       "promo": "Promo Code",
       "discount": "Discount",
+       "editUser": {
+        "title": "Edit User",
+        "name": "Name",
+        "namePlaceholder": "Name",
+        "phone": "Phone Number",
+        "phonePlaceholder": "Phone Number",
+        "email": "Email",
+        "password": "Password",
+        "passwordPlaceholder": "Password",
+        "passwordHint": "Please enter password",
+        "save": "Save",
+        "cancel": "Cancel"
+      },
       "errors": {
         "fetchLecturers": "Failed to fetch lecturers",
         "pointsError": "Points amount must be greater than zero",
@@ -229,9 +242,12 @@
       "monthsWithRevenue": "Months with Revenue",
       "purchaseCount": "Purchase Count",
       "noRevenueData": "No revenue data available for this lecturer"
+  },
+  "modals" : {
+        "confirmDelete": "delete this code?",
+        "deleteCodeConfirm": "Are you sure you want to delete this code?"
   }
-  }
-   
+}
   
     
   
