--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -33,6 +33,12 @@
       "3rd Secondary": "الصف الثالث الثانوي",
       "undefined": "غير محدد"
 },
+  "role" :{
+    "student": "طالب",
+    "teacher": "معلم",
+    "admin": "مسؤول",
+    "assistnat": "مساعد"
+  },
   "dashboard": "لوحة القيادة",
   "profile": "معلوماتي",
   "courses": "كورساتي",
