--- a/kalima-platform/frontend/public/locales/ar/promoCodes.json
+++ b/kalima-platform/frontend/public/locales/ar/promoCodes.json
@@ -83,6 +83,13 @@
   "errors": {
     "fetchFailed": "فشل في جلب البيانات"
   },
+  "profile" :{
+    "email" : "البريد الالكتروني",
+    "sequenceId" : "رقم التسلسل",
+    "sequenceIdTooltip" : "رقم التسلسل الخاص بك",
+    "parentLinkTitle" : "رابط الوالدين",
+    "parentLinkDescription" : "استخدم هذا الرابط للوصول للوالدين"
+  },
   "arrowAlt": "سهم بين البطاقات",
   "decorativeAlt": "زخارف نقطية",
   "toggleSidebar": "تبديل القائمة الجانبية"
