password indicator translated

--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -39,6 +39,12 @@
     "admin": "مسؤول",
     "assistnat": "مساعد"
   },
+  "passwordStrength": {
+    "label": "القوّة:",
+    "weak": "ضعيف",
+    "medium": "متوسّط",
+    "strong": "قوي"
+  },
   "dashboard": "لوحة القيادة",
   "profile": "معلوماتي",
   "courses": "كورساتي",
