--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -39,6 +39,12 @@
     "admin": "Admin",
     "assistnat": "Assistant"
   },
+   "passwordStrength": {
+    "label": "Strength:",
+    "weak": "Weak",
+    "medium": "Medium",
+    "strong": "Strong"
+  },
   "dashboard": "Dashboard",
   "profile": "My Profile",
   "courses": "My Courses",
