lectures card translated

--- a/kalima-platform/frontend/public/locales/ar/lectures.json
+++ b/kalima-platform/frontend/public/locales/ar/lectures.json
@@ -1,8 +1,16 @@
-{
+{ 
+  "generalPoints": "نقاط عامة",
+  "points": "نقاط",
+  "welcome": "مرحبا بك في موقع ",
   "title": "المحاضرات",
   "discover": "اكتشف أحدث المحاضرات",
   "showLectures": "عرض المحاضرات",
   "noLectures": "لا توجد محاضرات مطابقة للفلاتر المحددة.",
+  "free": "مجاني",
+  "paid": "مدفوع",
+  "enroll": "التسجيل",
+  "purchased": "مشترك",
+  "available : ": " المتاحة",
   "filters": {
     "reset": "إعادة تعيين الفلاتر",
     "stage": "دور المحاضر",
@@ -92,6 +100,12 @@
     "resetButton": "إعادة ضبط",
     "permissionWarning": "تعذر الوصول إلى الكاميرا. يرجى التحقق من الأذونات.",
     "scanError": "فشل في تهيئة الماسح"
+  },
+  "pagination": {
+    "previous": "السابق",
+    "next": "التالي",
+    "page": "الصفحة",
+    "of": "من"
   }
 
 
