--- a/kalima-platform/frontend/public/locales/ar/lectures.json
+++ b/kalima-platform/frontend/public/locales/ar/lectures.json
@@ -10,6 +10,7 @@
   "paid": "مدفوع",
   "enroll": "التسجيل",
   "purchased": "مشترك",
+  "purchase": "شراء",
   "available : ": " المتاحة",
   "filters": {
     "reset": "إعادة تعيين الفلاتر",
