--- a/kalima-platform/frontend/public/locales/en/lectures.json
+++ b/kalima-platform/frontend/public/locales/en/lectures.json
@@ -10,6 +10,7 @@
   "paid": "Paid",
   "enroll": "Enroll",
   "purchased": "Purchased",
+  "purchase": "Purchase",
   "available : ": " Available",
   "filters": {
     "reset": "Reset Filters",
