I am slowly fading away

--- a/kalima-platform/frontend/public/locales/ar/register.json
+++ b/kalima-platform/frontend/public/locales/ar/register.json
@@ -69,7 +69,7 @@
       "school": "المدرسة",
       "socialMedia": "وسائل التواصل الاجتماعي",
       "selectPlatform": "اختر المنصة",
-      "accountName": "اسم الحساب",
+      "accountName": "لينك الحساب",
       "selectSubject": "اختر المادة",
       "facebook": "فيسبوك",
       "twitter": "تويتر",
