--- a/kalima-platform/frontend/public/locales/ar/assistantPage.json
+++ b/kalima-platform/frontend/public/locales/ar/assistantPage.json
@@ -5,7 +5,7 @@
     "like": "إعجاب",
     "dislike": "عدم إعجاب",
     "share": "مشاركة",
-    "attachments": "مرفقات",
+
     "homeworks": "واجبات",
     "exams": "اختبارات",
     "settings": "الإعدادات",
@@ -81,6 +81,88 @@
         "name": "مني يحيى",
         "bio": "مساعدة في اللغة الألمانية، تركز على القواعد والمحادثة وتحضير الطلاب للاختبارات"
       }
-    ]
+    ],
+    
+  "common": {
+    "name": "الاسم",
+    "type": "النوع",
+    "subject": "المادة",
+    "level": "المستوى",
+    "price": "السعر",
+    "actions": "الإجراءات",
+    "details": "التفاصيل",
+    "notAvailable": "غير متوفر",
+    "pricePoints": "{{price}} نقطة",
+    "free": "مجاني",
+    "noDescription": "لا يوجد وصف",
+    "noSubject": "لا توجد مادة",
+    "view": "عرض",
+    "student": "الطالب",
+    "lecture": "المحاضرة",
+    "score": "الدرجة",
+    "status": "الحالة",
+    "submittedAt": "تم التقديم في",
+    "unknown": "غير معروف",
+    "scoreFormat": "{{score}}/{{maxScore}} ({{percentage}}%)",
+    "passed": "ناجح",
+    "failed": "راسب",
+    "loading": "جاري تحميل بيانات لوحة التحكم...",
+    "search": "بحث...",
+    "expertise": "التخصص"
+  },
+  "errors": {
+    "fetchFailed": "فشل في جلب بيانات لوحة التحكم",
+    "occurred": "حدث خطأ أثناء جلب البيانات",
+    "noData": "لا توجد بيانات متاحة"
+  },
+  "containers": {
+    "title": "الحاويات",
+    "notFound": "لم يتم العثور على حاويات"
+  },
+  "lectures": {
+    "title": "المحاضرات",
+    "views": "{{count}} مشاهدة",
+    "hasExam": "يحتوي على امتحان",
+    "viewData": "عرض بيانات المحاضرة",
+    "goToLecture": "الذهاب إلى المحاضرة",
+    "notFound": "لم يتم العثور على محاضرات"
+  },
+  "attachments": {
+    "title": "المرفقات",
+    "fileName": "اسم الملف",
+    "uploadedOn": "تم الرفع في",
+    "notFound": "لم يتم العثور على مرفقات"
+  },
+  "examSubmissions": {
+    "title": "تسليمات الامتحانات",
+    "notFound": "لم يتم العثور على تسليمات امتحانات"
+  },
+  "homeworkSubmissions": {
+    "title": "تسليمات الواجبات",
+    "notFound": "لم يتم العثور على تسليمات واجبات"
+  },
+  "stats": {
+    "title": "الإحصائيات",
+    "totalLectures": "إجمالي المحاضرات",
+    "lectureViews": "مشاهدات المحاضرات",
+    "examSubmissions": "تسليمات الامتحانات",
+    "homeworkSubmissions": "تسليمات الواجبات",
+    "attachments": "المرفقات"
+  },
+  "tabs": {
+    "containers": "الحاويات",
+    "lectures": "المحاضرات",
+    "attachments": "المرفقات",
+    "examSubmissions": "تسليمات الامتحانات",
+    "homeworkSubmissions": "تسليمات الواجبات"
+  },
+  "roles": {
+    "admin": "مدير",
+    "lecturer": "محاضر",
+    "student": "طالب",
+    "assistant": "مساعد"
   }
+}
+
+  
   
