kiss your homies goodnight

--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -61,6 +61,7 @@
   "auditLog": "سجل التدقيق",
   "myDashboard": "لوحة التحكم",
   "Packages": "الباقات",
+  "storeDashboard": "لوحة تحكم المتجر",
   "select": "اختر",
   "Create": "اضافة",
   "MyLectures": "محاضراتي"
