--- a/kalima-platform/frontend/public/locales/ar/common.json
+++ b/kalima-platform/frontend/public/locales/ar/common.json
@@ -64,5 +64,6 @@
   "storeDashboard": "لوحة تحكم المتجر",
   "select": "اختر",
   "Create": "اضافة",
-  "MyLectures": "محاضراتي"
+  "MyLectures": "محاضراتي",
+  "market": "المتجر"
   }
