--- a/kalima-platform/frontend/public/locales/en/common.json
+++ b/kalima-platform/frontend/public/locales/en/common.json
@@ -64,5 +64,6 @@
   "select": "Select",
   "Create": "Create",
   "MyLectures": "My Lectures",
-  "storeDashboard": "Store Dashboard"
+  "storeDashboard": "Store Dashboard",
+  "market": "Market"
 }
