--- a/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
+++ b/kalima-platform/frontend/public/locales/en/kalimaStore-ProductDetails.json
@@ -17,11 +17,38 @@
     "types": {
       "book": "Book",
       "product": "Product"
-    }
+    },
+    "serial": "Serial Number",
+    "whatsapp": "Whatsapp Number (for any questions)",
+    "description": "Description",
+    "subject": "Subject",
+    "off": "OFF",
+    "save": "Save {{amount}} {{currency}}",
+    "instantAccess": "Instant Access",
+    "downloadImmediately": "Download immediately",
+    "securePayment": "Secure Payment",
+    "safeProtected": "Safe & protected"
   },
   "payment": {
     "numberCopied": "Payment number copied!",
     "sendAmount": "Send the specified amount to the above number"
+  },
+  "paymentSection": {
+    "title": "Payment Information",
+    "subtitle": "Follow these simple steps to complete your purchase",
+    "paymentNumber": "Payment Number",
+    "copied": "Copied to clipboard!",
+    "copyHint": "Click to copy the payment number",
+    "step1": {
+      "title": "Send Payment",
+      "desc": "Transfer the exact amount to the payment number above using your preferred payment method."
+    },
+    "step2": {
+      "title": "Upload Screenshot",
+      "desc": "Take a screenshot of your payment confirmation and upload it in the form below."
+    },
+    "noteTitle": "Important Note",
+    "noteDesc": "Please ensure you send the exact amount and include the payment screenshot. We will process your order within 1-2 hours during business hours."
   },
   "purchaseSteps": {
     "title": "Purchase Steps",
@@ -44,15 +71,58 @@
     "done": "Done"
   },
   "errors": {
+    "invalidProductInfo": "Invalid product information.",
+    "fetchFailed": "Failed to fetch product details.",
+    "fetchErrorLog": "Error fetching product details:",
+    "noFileSelected": "Please select a payment screenshot.",
+    "noTransferNumber": "Please enter the transfer number.",
+    "fillBookFields": "Please fill in all book fields.",
+    "purchaseSubmissionFailed": "Purchase submission failed: ",
     "title": "Error!",
-    "invalidProductInfo": "Invalid product ID or type",
-    "invalidItemType": "Invalid item type",
-    "fetchFailed": "Failed to fetch item data",
-    "fetchErrorLog": "Error fetching item data:",
-    "copyFailed": "Failed to copy payment number:",
-    "productNotFound": "Product not found"
+    "productNotFound": "Product not found."
+  },
+  "success": {
+    "purchaseSubmitted": "Purchase submitted successfully!"
   },
   "logs": {
     "submittingPurchase": "Submitting purchase with file:"
+  },
+  "gallery": {
+    "noImages": "No Gallery Images",
+    "noImagesDesc": "No gallery images available for this product.",
+    "title": "Product Gallery",
+    "imageCounter": "{{current}} of {{total}}"
+  },
+  "purchaseForm": {
+    "title": "Complete Your Purchase",
+    "subtitle": "Fill in the details below to finalize your order",
+    "transferNumber": "Transfer Number *",
+    "transferNumberPlaceholder": "Enter the number you transferred from",
+    "transferNumberHint": "The phone number or account you sent payment from",
+    "bookPersonalization": "Book Personalization",
+    "nameOnBook": "Name on Book *",
+    "nameOnBookPlaceholder": "Enter name to appear on the book",
+    "numberOnBook": "Number on Book *",
+    "numberOnBookPlaceholder": "Enter number to appear on the book",
+    "seriesName": "Series Name *",
+    "seriesNamePlaceholder": "Enter series name",
+    "paymentScreenshot": "Payment Screenshot *",
+    "fileUploaded": "File uploaded successfully!",
+    "removeFile": "Remove file",
+    "dragDrop": "Drag and drop your payment screenshot here",
+    "orBrowse": "or click to browse files",
+    "maxFileSize": "Maximum file size: 10MB • Supported: JPG, PNG, PDF",
+    "chooseFile": "Choose File",
+    "submit": "Submit Purchase"
+  },
+  "sample": {
+    "noSample": "No Sample Available",
+    "noSampleDesc": "This {{type}} doesn't have a sample available for download.",
+    "available": "Sample Available",
+    "pdf": "PDF Sample",
+    "downloadDesc": "Download a sample of this {{type}} to preview the content before purchasing.",
+    "downloadButton": "Download Sample PDF",
+    "downloading": "Downloading...",
+    "fileWillBeDownloadedAs": "File will be downloaded as: {{filename}}"
   }
 }
